[package]
name = "qubic-tcp-types"
version.workspace = true
edition = "2021"

[dependencies]
getrandom = { version = "*", features = ["js"], optional = true}
serde = { version = "*", features = ["derive"] } # + derive
rand = { version = "*", optional = true}
qubic-types = { path= "../qubic-types", default-features = false, features = ["serde"] } # + server
tiny-keccak = { version = "2.0", features = ["k12"]}

[features]
default = ["serde", "std"]
serde = ["dep:serde", "qubic-types/serde"] # + serde
wasm = ["dep:getrandom"]
std = ["rand/default", "dep:rand", "qubic-types/default"]
